--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 <use href="./image/sprite.svg#icon-close-black"></use>
             </svg> 
         </button>
+        <div class="space">
+        <div>
         <ul class="mobil-menu-list">
             <li class="mobil-menu-list__li">
                 <a href="" class="mobil-menu-list__link">Студия</a>
@@ -68,7 +70,8 @@
                 <a href="" class="mobil-menu-list__link">Контакты</a>
             </li>
         </ul>
-
+</div>
+<div>
         <ul class="mob-margin">
             <li>
                 <a href="tel:+380961111111" class="tel-mob-menu-two">+38 096 111 11 11</a>
@@ -97,7 +100,8 @@
             </li>
         </ul>
     </div>
-
+    </div>
+</div>
     <section class="sect">
         <div class="bord-padding">
             <h1 class="top-title">Эффективные решения для вашего бизнеса</h1>
